Fix CSS validation issues: quote font-family names with whitespace and remove font-optical-sizing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,6 @@ nav .nav-wrapper {
 
 .geologica-regular {
   font-family: "Geologica", sans-serif;
-  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   font-variation-settings:
@@ -26,7 +25,6 @@ nav .nav-wrapper {
 html {
   background-color: whitesmoke;
   font-family: geologica-regular, sans-serif;
-  font-optical-sizing: auto;
 }
 
 
@@ -34,7 +32,6 @@ p {
   font-size: 115%;
   color: #323232;
   font-family: geologica-regular, sans-serif;
-  font-optical-sizing: auto;
 }
 
 .account-link{
@@ -81,7 +78,7 @@ font-size: xx-large;
 
 #scale-demo {
   color: #004d3f;
-  font-family: libre baskerville;
+  font-family: 'libre baskerville';
   font-size: x-large;
 }
 
@@ -92,7 +89,7 @@ font-size: xx-large;
 }
 
 .headings {
-  font-family: libre baskerville, serif;
+  font-family: 'libre baskerville', serif;
 }
 
 .warnings {
@@ -104,7 +101,7 @@ font-size: xx-large;
 .title {
   position: absolute;
   color: #3c3c3c;
-  font-family: libre baskerville;
+  font-family: 'libre baskerville';
   font-size: 3rem;
   z-index: 1;
 }
@@ -146,12 +143,12 @@ nav ul a {
  
 nav .brand-logo {
     max-height: 100%;
-    font-family: libre baskerville;
+    font-family: 'libre baskerville';
     color: #3c3c3c;
 }
 
 .logo {
-    font-family: libre baskerville;
+    font-family: 'libre baskerville';
     text-align: center;
     letter-spacing: 1px;
     font-size: 2.1rem;
@@ -202,36 +199,29 @@ nav .brand-logo {
   font-family: 'Libre Baskerville';
   font-size: xx-large;
   color: #004d40 ;
+}
 
-  /* Form validation */
-  
-  /* label color */
-  .input-field label {
-    color: #000;
-  }
-  /* label focus color */
-  .input-field input[type=text]:focus + label {
-    color: #000;
-  }
-  /* label underline focus color */
-  .input-field input[type=text]:focus {
-    border-bottom: 1px solid #000;
-    box-shadow: 0 1px 0 0 #000;
-  }
-  /* valid color */
-  .input-field input[type=text].valid {
-    border-bottom: 1px solid #000;
-    box-shadow: 0 1px 0 0 #000;
-  }
-  /* invalid color */
-  .input-field input[type=text].invalid {
-    border-bottom: 1px solid #000;
-    box-shadow: 0 1px 0 0 #000;
-  }
-  /* icon prefix focus color */
-  .input-field .prefix.active {
-    color: #000;
-  }
+/* Form validation */
+.input-field label {
+  color: #000;
+}
+.input-field input[type=text]:focus + label {
+  color: #000;
+}
+.input-field input[type=text]:focus {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+}
+.input-field input[type=text].valid {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+}
+.input-field input[type=text].invalid {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+}
+.input-field .prefix.active {
+  color: #000;
 }
 
 /* footer */
